# AMRUPT

./: README.md
Course materials and assignments/Syllabus/: AMRUPT_Syllabus.doc
Firmware/: README.txt  musicRTL.grc
Firmware/Ground_nodes/: RTL SDR Installation Guide for Raspbian OS (Rolling Tutorial).docx  ~$L SDR Installation Guide for Raspbian OS (Rolling Tutorial).docx
Firmware/Ground_nodes/Pi_DOA/Summer 2018/GNU Radio/gr-xcorr/lib/: CMakeLists.txt  add_const_ff_impl.cc  cub_delay_cc_impl.h  cumulative_ff_impl.h  full_capon3_ccf_impl.cc  full_capon3_ccf_impl.h  full_capon_ccf_impl.cc  hold_ff_impl.cc  message_sink_f_impl.cc  message_sink_f_impl.h  message_sink_i_impl.cc  mode_ii_impl.cc  multiply_exp_cc_impl.h  peak_estimator_cif_impl.cc  peak_estimator_cif_impl.h  phase2xcorr_ff_impl.h  pi2pi_ff_impl.h  sample_offset_cci_impl.h  test_xcorr.cc  variance_ff_impl.cc  zero_pad_cc_impl.cc  zero_pad_cc_impl.h
Gantt chart/: Phase-based trilateration system.gantter
Literature/Best_practices/: In_line_comments_example.asm
Literature/General_radio_direction_finding/: foo.txt
Literature/Signal encoding/: Presentation on PRN Codes_by Hunter.html  Signal encoding schemes.doc
Meetings/Meeting_3/: readme.txt
Meetings/Meeting_5/: Week_5_meeting_slides.pptx
Software/Angle of Arrival/: README.md  README.md.txt
Software/Angle of Arrival/gr-xcorr/grc/: CMakeLists.txt  xcorr_arrow_f.xml  xcorr_capon_ccf.xml  xcorr_delay.xml  xcorr_full_capon3_ccf.xml  xcorr_full_capon_ccf.xml  xcorr_hold_ff.xml  xcorr_hold_ii.xml  xcorr_linearslope_ff.xml  xcorr_message_sink_f.xml  xcorr_message_sink_i.xml  xcorr_pi2pi_ff.xml  xcorr_sample_offset_cci.xml  xcorr_unwrap_ff.xml  xcorr_variance_ff.xml
Spring 2018/: README.md  SPI.md  video tutorial.md
Spring 2018/Demodulated IQ Samples/: Parallel IQ Extraction (Enter Commands into Ubuntu Terminal)
Spring 2018/GNU Radio/: README  README.md
Spring 2018/GRC/: GRC - README
Spring 2018/Triangulation/: README  ThreeReceiverTriangulate.py  Triangulation Psuedocode - README
System_architecture/: System_architecture_v1.0.pptx  System_architecture_v1.1.pptx  System_architecture_v1.2.pptx
Tests/: README.md
Tests/12-15-2018 Indoor Tests/: Indoor_Testing_Protocol.docx  README.md  Test1a.txt  Test1b.txt  Test1c.txt  Test2a.txt  Test2b.txt  Test2c.txt  Test3a.txt  Test3b.txt  Test3c.txt  Test4a.txt  Test4b.txt  Test4c.txt  Test5a.txt  Test5b.txt  Test5c.txt  Test6a.txt  Test6b.txt  Test6c.txt  Test7a.txt  Test7b.txt  Test7c.txt  testingscript.py
Tests/12-19-2018 Outdoor Tests/: README.md
Tests/12-20-2018 Outdoor Tests/: 12_20_2018_Outdoor_Tests.xlsx  2ant0trial1.txt  2ant0trial2.txt  2ant45trial1.txt  2ant45trial2.txt  2ant90trial1.txt  2ant90trial2.txt  2antTrial1.xlsx  2antTrial2.xlsx  MUSIC.xlsx  MUSICsmoothing.xlsx  README.md  music0.txt  music45.txt  music90.txt  musicsmoothing0.txt  musicsmoothing45.txt  musicsmoothing90.txt  rootMUSIC.xlsx  rootmusic0.txt  rootmusic45.txt  rootmusic90.txt  testingscriptnew.py
Tests/3-1-2019 Simulation Tests/: README.txt  angle0alpha0_45cc1310.txt  angle0alpha0_48cc1310.txt  angle0alpha0_50cc1310.txt  angle0alpha0_52cc1310.txt  angle0alpha0_55cc1310.txt  angle30alpha0_45cc1310.txt  angle30alpha0_48cc1310.txt  angle30alpha0_50cc1310.txt  angle30alpha0_52cc1310.txt  angle30alpha0_55cc1310.txt  angle45alpha0_45cc1310.txt  angle45alpha0_48cc1310.txt  angle45alpha0_50cc1310.txt  angle45alpha0_52cc1310.txt  angle45alpha0_55cc1310.txt  angle60alpha0_45cc1310.txt  angle60alpha0_48cc1310.txt  angle60alpha0_50cc1310.txt  angle60alpha0_52cc1310.txt  angle60alpha0_55cc1310.txt  angle90alpha0_45cc1310.txt  angle90alpha0_48cc1310.txt  angle90alpha0_50cc1310.txt  angle90alpha0_52cc1310.txt  angle90alpha0_55cc1310.txt
Tests/4-8-2019 Simulation Tests/: README.md  angle0alpha0_45.txt  angle0alpha0_48.txt  angle0alpha0_5.txt  angle0alpha0_52.txt  angle0alpha0_55.txt  angle0alpha0_5noise.txt  angle15alpha0_5.txt  angle15alpha0_5noise.txt  angle30alpha0_45.txt  angle30alpha0_48.txt  angle30alpha0_5.txt  angle30alpha0_52.txt  angle30alpha0_55.txt  angle30alpha0_5noise.txt  angle45alpha0_45.txt  angle45alpha0_48.txt  angle45alpha0_5.txt  angle45alpha0_52.txt  angle45alpha0_55.txt  angle45alpha0_5noise.txt  angle60alpha0_45.txt  angle60alpha0_48.txt  angle60alpha0_5.txt  angle60alpha0_52.txt  angle60alpha0_55.txt  angle60alpha0_5noise.txt  angle90alpha0_45.txt  angle90alpha0_48.txt  angle90alpha0_5.txt  angle90alpha0_52.txt  angle90alpha0_55.txt  angle90alpha0_5noise.txt  testingscriptnew.py
Tests/5-20-2019 Outdoor Tests/: 0_gp_no.txt  0_gp_ref.txt  0_no_no.txt  0_no_ref.txt  15_gp_no.txt  15_gp_ref.txt  30_gp_no.txt  30_gp_ref.txt  30_no_no.txt  30_no_ref.txt  45_gp_no.txt  45_gp_ref.txt  45_no_no.txt  45_no_ref.txt  90_gp_no.txt  90_gp_ref.txt  90_no_no.txt  README.md
Tests/5-9-2019 Indoor Tests/: 135againindoorswhip.txt  135indoors.txt  135indoorswhip.txt  135whipindoorsnoise.txt  135whipindoorstrial2.txt  15indoorsrd.txt  15indoorswhip.txt  15whipindoorsnoise.txt  15whipindoorstrial2.txt  45indoorsrd.txt  45indoorswhip.txt  90indoorsrd.txt  (+10 more)
(+429 files in other folders)
